// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Breadcrumbs /> Default story renders snapshot 1`] = `
<div
  class="m-spacing-size-1"
>
  <nav
    aria-label="breadcrumbs links"
    class="breadcrumbs"
  >
    <ul
      class="breadcrumbs__list"
    >
      <li
        class="breadcrumbs__item breadcrumbs__item-back"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          <svg
            class="icon breadcrumbs__back-icon"
            fill="currentColor"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Child
            </title>
            <path
              d="M10.1077 11.9998L14.3537 16.2461C14.4474 16.3396 14.4974 16.4543 14.5037 16.5903C14.5102 16.7262 14.4602 16.8472 14.3537 16.9536C14.2474 17.0601 14.1295 17.1133 14 17.1133C13.8705 17.1133 13.7526 17.0601 13.6462 16.9536L9.25774 12.5653C9.17057 12.478 9.10932 12.3888 9.07399 12.2978C9.03882 12.2068 9.02124 12.1075 9.02124 11.9998C9.02124 11.8922 9.03882 11.7928 9.07399 11.7018C9.10932 11.6108 9.17057 11.5217 9.25774 11.4343L13.6462 7.04607C13.7397 6.9524 13.8545 6.9024 13.9905 6.89607C14.1263 6.88957 14.2474 6.93957 14.3537 7.04607C14.4602 7.1524 14.5135 7.27032 14.5135 7.39982C14.5135 7.52932 14.4602 7.64724 14.3537 7.75357L10.1077 11.9998Z"
            />
          </svg>
        </a>
        <span
          aria-hidden="true"
          class="text text--body-md breadcrumbs__separator"
        >
          /
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Home
        </a>
        <span
          aria-hidden="true"
          class="text text--body-md breadcrumbs__separator"
        >
          /
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Child
        </a>
        <span
          aria-hidden="true"
          class="text text--body-md breadcrumbs__separator"
        >
          /
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Grandchild
        </a>
        <span
          aria-hidden="true"
          class="text text--body-md breadcrumbs__separator"
        >
          /
        </span>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`<Breadcrumbs /> LongList story renders snapshot 1`] = `
<div
  class="m-spacing-size-1"
>
  <nav
    aria-label="breadcrumbs links"
    class="breadcrumbs"
  >
    <ul
      class="breadcrumbs__list"
    >
      <li
        class="breadcrumbs__item breadcrumbs__item-back"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          <svg
            class="icon breadcrumbs__back-icon"
            fill="currentColor"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Breadcrumb 9
            </title>
            <path
              d="M10.1077 11.9998L14.3537 16.2461C14.4474 16.3396 14.4974 16.4543 14.5037 16.5903C14.5102 16.7262 14.4602 16.8472 14.3537 16.9536C14.2474 17.0601 14.1295 17.1133 14 17.1133C13.8705 17.1133 13.7526 17.0601 13.6462 16.9536L9.25774 12.5653C9.17057 12.478 9.10932 12.3888 9.07399 12.2978C9.03882 12.2068 9.02124 12.1075 9.02124 11.9998C9.02124 11.8922 9.03882 11.7928 9.07399 11.7018C9.10932 11.6108 9.17057 11.5217 9.25774 11.4343L13.6462 7.04607C13.7397 6.9524 13.8545 6.9024 13.9905 6.89607C14.1263 6.88957 14.2474 6.93957 14.3537 7.04607C14.4602 7.1524 14.5135 7.27032 14.5135 7.39982C14.5135 7.52932 14.4602 7.64724 14.3537 7.75357L10.1077 11.9998Z"
            />
          </svg>
        </a>
        <span
          aria-hidden="true"
          class="text text--body-md breadcrumbs__separator"
        >
          /
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Parent
        </a>
        <span
          aria-hidden="true"
          class="text text--body-md breadcrumbs__separator"
        >
          /
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Breadcrumb 1
        </a>
        <span
          aria-hidden="true"
          class="text text--body-md breadcrumbs__separator"
        >
          /
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Breadcrumb 2
        </a>
        <span
          aria-hidden="true"
          class="text text--body-md breadcrumbs__separator"
        >
          /
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Breadcrumb 3
        </a>
        <span
          aria-hidden="true"
          class="text text--body-md breadcrumbs__separator"
        >
          /
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Breadcrumb 4
        </a>
        <span
          aria-hidden="true"
          class="text text--body-md breadcrumbs__separator"
        >
          /
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Breadcrumb 5
        </a>
        <span
          aria-hidden="true"
          class="text text--body-md breadcrumbs__separator"
        >
          /
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Breadcrumb 6
        </a>
        <span
          aria-hidden="true"
          class="text text--body-md breadcrumbs__separator"
        >
          /
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Breadcrumb 7
        </a>
        <span
          aria-hidden="true"
          class="text text--body-md breadcrumbs__separator"
        >
          /
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Breadcrumb 8
        </a>
        <span
          aria-hidden="true"
          class="text text--body-md breadcrumbs__separator"
        >
          /
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Breadcrumb 9
        </a>
        <span
          aria-hidden="true"
          class="text text--body-md breadcrumbs__separator"
        >
          /
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Breadcrumb 10
        </a>
        <span
          aria-hidden="true"
          class="text text--body-md breadcrumbs__separator"
        >
          /
        </span>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`<Breadcrumbs /> LongText story renders snapshot 1`] = `
<div
  class="m-spacing-size-1"
>
  <nav
    aria-label="breadcrumbs links"
    class="breadcrumbs"
  >
    <ul
      class="breadcrumbs__list"
    >
      <li
        class="breadcrumbs__item breadcrumbs__item-back"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          <svg
            class="icon breadcrumbs__back-icon"
            fill="currentColor"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Breadcrumb 2 Lorem ipsum dolor sit amet, no overflow is two lines at 320px
            </title>
            <path
              d="M10.1077 11.9998L14.3537 16.2461C14.4474 16.3396 14.4974 16.4543 14.5037 16.5903C14.5102 16.7262 14.4602 16.8472 14.3537 16.9536C14.2474 17.0601 14.1295 17.1133 14 17.1133C13.8705 17.1133 13.7526 17.0601 13.6462 16.9536L9.25774 12.5653C9.17057 12.478 9.10932 12.3888 9.07399 12.2978C9.03882 12.2068 9.02124 12.1075 9.02124 11.9998C9.02124 11.8922 9.03882 11.7928 9.07399 11.7018C9.10932 11.6108 9.17057 11.5217 9.25774 11.4343L13.6462 7.04607C13.7397 6.9524 13.8545 6.9024 13.9905 6.89607C14.1263 6.88957 14.2474 6.93957 14.3537 7.04607C14.4602 7.1524 14.5135 7.27032 14.5135 7.39982C14.5135 7.52932 14.4602 7.64724 14.3537 7.75357L10.1077 11.9998Z"
            />
          </svg>
        </a>
        <span
          aria-hidden="true"
          class="text text--body-md breadcrumbs__separator"
        >
          /
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Home
        </a>
        <span
          aria-hidden="true"
          class="text text--body-md breadcrumbs__separator"
        >
          /
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Breadcrumb 1
        </a>
        <span
          aria-hidden="true"
          class="text text--body-md breadcrumbs__separator"
        >
          /
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Breadcrumb 2 Lorem ipsum dolor sit amet, no overflow is two lines at 320px
        </a>
        <span
          aria-hidden="true"
          class="text text--body-md breadcrumbs__separator"
        >
          /
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Breadcrumb 3 Lorem ipsum dolor sit amet, consectetur adipiscing elit, no overflow is 3 lines at 320px
        </a>
        <span
          aria-hidden="true"
          class="text text--body-md breadcrumbs__separator"
        >
          /
        </span>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`<Breadcrumbs /> LongTextCustomSeparator story renders snapshot 1`] = `
<div
  class="m-spacing-size-1"
>
  <nav
    aria-label="breadcrumbs links"
    class="breadcrumbs"
  >
    <ul
      class="breadcrumbs__list"
    >
      <li
        class="breadcrumbs__item breadcrumbs__item-back"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          <svg
            class="icon breadcrumbs__back-icon"
            fill="currentColor"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Breadcrumb 2 Lorem ipsum dolor sit amet, no overflow is two lines at 320px
            </title>
            <path
              d="M10.1077 11.9998L14.3537 16.2461C14.4474 16.3396 14.4974 16.4543 14.5037 16.5903C14.5102 16.7262 14.4602 16.8472 14.3537 16.9536C14.2474 17.0601 14.1295 17.1133 14 17.1133C13.8705 17.1133 13.7526 17.0601 13.6462 16.9536L9.25774 12.5653C9.17057 12.478 9.10932 12.3888 9.07399 12.2978C9.03882 12.2068 9.02124 12.1075 9.02124 11.9998C9.02124 11.8922 9.03882 11.7928 9.07399 11.7018C9.10932 11.6108 9.17057 11.5217 9.25774 11.4343L13.6462 7.04607C13.7397 6.9524 13.8545 6.9024 13.9905 6.89607C14.1263 6.88957 14.2474 6.93957 14.3537 7.04607C14.4602 7.1524 14.5135 7.27032 14.5135 7.39982C14.5135 7.52932 14.4602 7.64724 14.3537 7.75357L10.1077 11.9998Z"
            />
          </svg>
        </a>
        <span
          aria-hidden="true"
          class="text text--body-md breadcrumbs__separator"
        >
          &gt;
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Home
        </a>
        <span
          aria-hidden="true"
          class="text text--body-md breadcrumbs__separator"
        >
          &gt;
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Breadcrumb 1
        </a>
        <span
          aria-hidden="true"
          class="text text--body-md breadcrumbs__separator"
        >
          &gt;
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Breadcrumb 2 Lorem ipsum dolor sit amet, no overflow is two lines at 320px
        </a>
        <span
          aria-hidden="true"
          class="text text--body-md breadcrumbs__separator"
        >
          &gt;
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Breadcrumb 3 Lorem ipsum dolor sit amet, consectetur adipiscing elit, no overflow is 3 lines at 320px
        </a>
        <span
          aria-hidden="true"
          class="text text--body-md breadcrumbs__separator"
        >
          &gt;
        </span>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`<Breadcrumbs /> OneCrumb story renders snapshot 1`] = `
<div
  class="m-spacing-size-1"
>
  <nav
    aria-label="breadcrumbs links"
    class="breadcrumbs"
  >
    <ul
      class="breadcrumbs__list"
    >
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Breadcrumb 1
        </a>
        <span
          aria-hidden="true"
          class="text text--body-md breadcrumbs__separator"
        >
          /
        </span>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`<Breadcrumbs /> TwoCrumbs story renders snapshot 1`] = `
<div
  class="m-spacing-size-1"
>
  <nav
    aria-label="breadcrumbs links"
    class="breadcrumbs"
  >
    <ul
      class="breadcrumbs__list"
    >
      <li
        class="breadcrumbs__item breadcrumbs__item-back"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          <svg
            class="icon breadcrumbs__back-icon"
            fill="currentColor"
            role="img"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              Breadcrumb 1
            </title>
            <path
              d="M10.1077 11.9998L14.3537 16.2461C14.4474 16.3396 14.4974 16.4543 14.5037 16.5903C14.5102 16.7262 14.4602 16.8472 14.3537 16.9536C14.2474 17.0601 14.1295 17.1133 14 17.1133C13.8705 17.1133 13.7526 17.0601 13.6462 16.9536L9.25774 12.5653C9.17057 12.478 9.10932 12.3888 9.07399 12.2978C9.03882 12.2068 9.02124 12.1075 9.02124 11.9998C9.02124 11.8922 9.03882 11.7928 9.07399 11.7018C9.10932 11.6108 9.17057 11.5217 9.25774 11.4343L13.6462 7.04607C13.7397 6.9524 13.8545 6.9024 13.9905 6.89607C14.1263 6.88957 14.2474 6.93957 14.3537 7.04607C14.4602 7.1524 14.5135 7.27032 14.5135 7.39982C14.5135 7.52932 14.4602 7.64724 14.3537 7.75357L10.1077 11.9998Z"
            />
          </svg>
        </a>
        <span
          aria-hidden="true"
          class="text text--body-md breadcrumbs__separator"
        >
          /
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Breadcrumb 1
        </a>
        <span
          aria-hidden="true"
          class="text text--body-md breadcrumbs__separator"
        >
          /
        </span>
      </li>
      <li
        class="breadcrumbs__item"
      >
        <a
          class="breadcrumbs__link"
          href="#"
        >
          Breadcrumb 2
        </a>
        <span
          aria-hidden="true"
          class="text text--body-md breadcrumbs__separator"
        >
          /
        </span>
      </li>
    </ul>
  </nav>
</div>
`;
